--- a/style.css
+++ b/style.css
@@ -42,10 +42,9 @@ h1{
 .navbar { 
 	background-color: white; 
 	font-family: SlateForOnePlus-Bold;
-	/*background-image: url("Art/Banner.png");*/
 	position:fixed; 
 	width:100%; 	
-	background: black !important; 
+	background: transparent !important; 
 	z-index: 100000; 
 }
 .bg-poster{
@@ -57,7 +56,7 @@ h1{
 	position: relative;
 }
 .borderstyle{
-	background-color: #3b3434;
+	background-color: #212529;
 	border: 100px solid;
 }
 .bottomnav{
@@ -69,7 +68,7 @@ h1{
 }
 .bg-dark{
 	transition: 500ms ease;
-	background: transparent !important;
+	background: transparent; !important;
 }
 .bg-dark.scrolled{
 	background: #3b3434 !important;
@@ -95,7 +94,7 @@ h1{
 	color: white;
 }
 .navbar .navbar-nav .nav-link:hover{
-	color: #d91515;
+	color: #ff0e1f;
 	background-image:transparent !important;
 	border-bottom: 1.3px solid white;
 }
@@ -297,4 +296,87 @@ footer .form-control {
 .teamstext{
   font-size: 60px;
   color: white;
+}
+
+.tourn-btn{
+  color: #ff0e1f;
+  border: 1px solid #ff0e1f;
+  padding: 20px 50px;
+}
+
+.tourn-btn:hover{
+  text-decoration: none;
+  background-color: #ff0e1f;
+  color: #fff;
+  box-shadow: 0 3px 10px #ff0e1f;
+}
+
+.tourn-btn-text{
+  font-family: SlateForOnePlus-Medium;
+  font-size: 15px;
+}
+
+.form-group{
+  color: #fff;
+}
+
+.tourn-bg-nav{
+  background-color: #212529 !important;
+}
+
+/*drag and drop files*/
+.files input {
+    outline: 2px dashed #92b0b3;
+    outline-offset: -10px;
+    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    padding: 120px 0px 85px 35%;
+    text-align: center !important;
+    margin: 0;
+    width: 100% !important;
+}
+.files input:focus{     outline: 2px dashed #92b0b3;  outline-offset: -10px;
+    -webkit-transition: outline-offset .15s ease-in-out, background-color .15s linear;
+    transition: outline-offset .15s ease-in-out, background-color .15s linear; border:1px solid #92b0b3;
+ }
+.files{ position:relative}
+.files:after {  pointer-events: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 50px;
+    right: 0;
+    height: 56px;
+    content: "";
+    background-image: url(https://image.flaticon.com/icons/svg/126/126477.svg);
+    display: block;
+    margin: 0 auto;
+    background-size: 100%;
+    background-repeat: no-repeat;
+}
+.color input{ background-color:#f1f1f1;}
+.files:before {
+    position: absolute;
+    bottom: 10px;
+    left: 0;  pointer-events: none;
+    width: 100%;
+    right: 0;
+    height: 57px;
+    display: block;
+    margin: 0 auto;
+    color: #2ea591;
+    font-weight: 600;
+    text-transform: capitalize;
+    text-align: center;
+}
+.form-group{
+  font-family: SlateForOnePlus-Medium;
+}
+.form-control{
+  border-radius: 0px;
+  border: none;
+}
+
+.form-control:focus{
+box-shadow: 0 3px 10px #ff0e1f;
 }
