--- a/style.css
+++ b/style.css
@@ -380,3 +380,57 @@ footer .form-control {
 .form-control:focus{
 box-shadow: 0 3px 10px #ff0e1f;
 }
+
+/*loading animation*/
+/*loading animation*/
+/* =Elements style
+---------------------- */
+.load-wrapp {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #212529;
+  z-index: 100000;
+}
+.load-wrapp:last-child {
+  margin-right: 0;
+}
+
+.line {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  background-color: #FF0E1F;
+}
+
+/* =Animate the stuff
+------------------------ */
+.load-3 .line:nth-last-child(1) {
+  animation: loadingC 0.6s 0.1s linear infinite;
+}
+.load-3 .line:nth-last-child(2) {
+  animation: loadingC 0.6s 0.2s linear infinite;
+}
+.load-3 .line:nth-last-child(3) {
+  animation: loadingC 0.6s 0.3s linear infinite;
+}
+.load-3 .line:nth-last-child(4) {
+  animation: loadingC 0.6s 0.4s linear infinite;
+}
+@keyframes loadingC {
+  0 {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
+}
